complete swagger documentations
